# GTA

3rdPartLib/: install3rdPartLib.sh
gta/: CMakeLists.txt  gta.xml  package.xml
gta/launch/: gta_pc2.launch  gta_ydl_odom.launch  gta_ydl_vicon.launch  yolo.launch
gta/launch/rviz/: gta_rviz.rviz
gta/launch/yaml/: extrinsic.yaml
gta/msg/: obj.msg  vertice.msg
gta/src/: To_odometry.cpp  gta.cpp  gta_pc.cpp  gta_ydl.cpp  gta_ydl_old.cpp  record.cpp  tracker.cpp  tracker_pf.cpp  visualization.cpp  yolo.cpp
gta/src/include/: To_odometry.h  common.h  gta.h  gta_pc.h  gta_ydl.h  gta_ydl_old.h  record.h  tracker.h  tracker_pf.h  visualization.h  yamlRead.h  yolo.h
gta/src/log/: recordbag.sh  vrpn.launch
gta/src/log/indoor/: uav_error.txt  uav_gt.txt  uav_tracked.txt
